[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/AsepriteWizard/config_dialog.gd" type="Script" id=1]

[node name="config_dialog" type="WindowDialog"]
margin_right = 400.0
margin_bottom = 250.0
rect_min_size = Vector2( 400, 250 )
window_title = "Aseprite Wizard Configuration"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 361.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 321.0
margin_bottom = 48.0
custom_constants/separation = 10

[node name="Aseprite Command" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 321.0
margin_bottom = 14.0
hint_tooltip = "Define the path for Aseprite command"
mouse_filter = 1
text = "Aseprite Command Path"

[node name="aseprite_command" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 321.0
margin_bottom = 48.0

[node name="enable_importer" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 321.0
margin_bottom = 92.0
hint_tooltip = "Enable Aseprite automatic importer for files located inside the project folder."
pressed = true
text = "Enable Aseprite Importer"

[node name="remove_source" type="CheckBox" parent="MarginContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 321.0
margin_bottom = 136.0
hint_tooltip = "Wizard only: removes *.json and *.png files generated during import."
text = "Remove source files"

[node name="VBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 321.0
margin_bottom = 176.0
custom_constants/separation = 30
alignment = 2

[node name="close" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_left = 203.0
margin_right = 250.0
margin_bottom = 20.0
text = "Close"

[node name="save" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_left = 280.0
margin_right = 321.0
margin_bottom = 20.0
text = "Save"
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer2/close" to="." method="_on_close_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer2/save" to="." method="_on_save_button_up"]
